nginx/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gnuu
spec:
  redirectScheme:
    scheme: https
    permanent: true
