nginx/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gnuu
  name: gnuu
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: k8s.gnuu.de
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /repo
        backend:
          serviceName: repo
          servicePort: 80
      - path: /cgi-bin/
        backend:
          serviceName: app
          servicePort: 80
  tls:
  - hosts:
    - k8s.gnuu.de
    secretName: k8s-gnuu-de-cert
